Added a type checking line to the UnitOfWorProvicer __call__ method. Added a string conversion to the demo jupyter notebook when making a uow from unit of work string.

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -96,7 +96,7 @@
     "mongo_client = mongomock.MongoClient()\n",
     "\n",
     "# Demo filesystem\n",
-    "tmpdir =  Path.cwd().parent / r\"data\" \n",
+    "tmpdir =  Path.cwd().parent / r\"data\"\n",
     "tmpdir = pathlib.Path(tmpdir)\n",
     "filesystem = LocalFileSystem(root=tmpdir)\n",
     "\n",
@@ -105,7 +105,7 @@
     "\n",
     "# Get uow to act on database\n",
     "uow_provider = UnitOfWorkProvider(mongo_client, filesystem, memory_store)\n",
-    "unit_of_work = uow_provider(tmpdir)\n",
+    "unit_of_work = uow_provider(str(tmpdir / \"internal\"))\n",
     "\n",
     "# Get raw_property_models\n",
     "property_models_path = Path.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"property_models.json\"\n",
@@ -133,7 +133,7 @@
     "records_files = list(netcdf_dir.glob(\"*.xlsx\"))\n",
     "raw_records = []\n",
     "for filepath in records_files:\n",
-    "        file = pd.read_excel(filepath, engine='openpyxl', dtype=str) \n",
+    "        file = pd.read_excel(filepath, engine='openpyxl', dtype=str)\n",
     "        file_json = file.to_json(orient=\"records\")\n",
     "        records = json.loads(file_json)\n",
     "        raw_records.extend(records)\n",
