added missing code/property models for workign notebook demo

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +96,16 @@
     "mongo_client = mongomock.MongoClient()\n",
     "\n",
     "# Demo filesystem\n",
-    "tmpdir =  Path.cwd().parent / r\"data\" \n",
+    "tmpdir =  Path.cwd().parent / r\"data\" / r\"internal\"\n",
     "tmpdir = pathlib.Path(tmpdir)\n",
-    "filesystem = LocalFileSystem(root=tmpdir)\n",
+    "filesystem = LocalFileSystem(root=str(tmpdir))\n",
     "\n",
     "# Empty memory store for demo\n",
     "memory_store = dict()\n",
     "\n",
     "# Get uow to act on database\n",
     "uow_provider = UnitOfWorkProvider(mongo_client, filesystem, memory_store)\n",
-    "unit_of_work = uow_provider(tmpdir)\n",
+    "unit_of_work = uow_provider(str(tmpdir))\n",
     "\n",
     "# Get raw_property_models\n",
     "property_models_path = Path.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"property_models.json\"\n",
@@ -163,6 +163,13 @@
     "            uow.data.add(dataarray)\n",
     "    uow.commit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
