--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -27,13 +27,13 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import pathlib\n",
+    "import upath\n",
     "import pandas as pd\n",
     "import mongomock\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "from fsspec.implementations.local import LocalFileSystem\n",
-    "from pathlib import Path\n",
+    "from upath import UPath\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from signalstore import UnitOfWorkProvider"
@@ -479,8 +479,8 @@
     "mongo_client = mongomock.MongoClient()\n",
     "\n",
     "# Demo filesystem\n",
-    "tmpdir =  Path.cwd().parent / r\"data\" / r\"internal\"\n",
-    "tmpdir = pathlib.Path(tmpdir)\n",
+    "tmpdir =  UPath.cwd().parent / r\"data\" / r\"internal\"\n",
+    "tmpdir = upath.UPath(tmpdir)\n",
     "filesystem = LocalFileSystem(root=str(tmpdir))\n",
     "# clear tmpdir\n",
     "for file in filesystem.ls(tmpdir):\n",
@@ -494,12 +494,12 @@
     "unit_of_work = uow_provider(str(tmpdir))\n",
     "\n",
     "# Get raw_property_models\n",
-    "property_models_path = Path.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"property_models.json\"\n",
+    "property_models_path = UPath.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"property_models.json\"\n",
     "with open(property_models_path, 'r') as file:\n",
     "    raw_property_models = json.load(file)\n",
     "\n",
     "# Get raw_metamodels\n",
-    "metamodels_dir = Path.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"metamodels\"\n",
+    "metamodels_dir = UPath.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"metamodels\"\n",
     "metamodel_filepaths = list(metamodels_dir.glob(\"*.json\"))\n",
     "raw_metamodels = []\n",
     "for filepath in metamodel_filepaths:\n",
@@ -507,7 +507,7 @@
     "        raw_metamodels.append(json.load(file))\n",
     "\n",
     "# Get raw_data_models\n",
-    "data_models_dir = Path.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"data_models\"\n",
+    "data_models_dir = UPath.cwd().parent / r\"tests\" / r\"data\" / r\"valid_data\" / r\"models\" / r\"data_models\"\n",
     "data_model_filepaths = list(data_models_dir.glob(\"*.json\"))\n",
     "raw_data_models = []\n",
     "for filepath in data_model_filepaths:\n",
@@ -515,7 +515,7 @@
     "        raw_data_models.append(json.load(file))\n",
     "\n",
     "# Get raw_records\n",
-    "netcdf_dir = Path.cwd().parent / r\"data\" / r\"input\"\n",
+    "netcdf_dir = UPath.cwd().parent / r\"data\" / r\"input\"\n",
     "records_files = list(netcdf_dir.glob(\"*.xlsx\"))\n",
     "raw_records = []\n",
     "for filepath in records_files:\n",
@@ -525,7 +525,7 @@
     "        raw_records.extend(records)\n",
     "\n",
     "# Get dataarrays\n",
-    "netcdf_dir = Path.cwd().parent / r\"data\" / r\"input\"\n",
+    "netcdf_dir = UPath.cwd().parent / r\"data\" / r\"input\"\n",
     "netcdf_files = list(netcdf_dir.glob(\"*.nc\"))\n",
     "dataarrays = []\n",
     "for filepath in netcdf_files:\n",
