Added purge method to UnitOfWork that purges all the data repositories. Added time_threshold argument to the DomainRepository and MemoryRepository, which for some reason didn't have them even though their underlying DAOs have them.

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -13,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmongomock\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mxarray\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mxr\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m signal\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
    "source": [
     "import sys, os\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
@@ -29,6 +41,7 @@
     "from scipy import signal\n",
     "import numpy as np\n",
     "from fsspec.implementations.local import LocalFileSystem\n",
+    "from fsspec.implementations.dirfs import DirFileSystem\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "from signalstore import UnitOfWorkProvider\n"
@@ -78,8 +91,9 @@
     "\n",
     "# Demo filesystem\n",
     "tmpdir =  Path.cwd().parent / r\"data\" / r\"internal\"\n",
-    "tmpdir = pathlib.Path(tmpdir)\n",
-    "filesystem = LocalFileSystem(root=str(tmpdir))\n",
+    "tmpdir = pathlib.Path(tmpdir) # we can use UPath if we want to emulate a Path for a cloud or HTTPS based file system\n",
+    "og_filesystem = LocalFileSystem() # we can use any fsspec filesystem, including Google Cloud, Amazon Web Services, etc.\n",
+    "filesystem = DirFileSystem(tmpdir, og_filesystem)\n",
     "# clear tmpdir\n",
     "for file in filesystem.ls(tmpdir):\n",
     "    filesystem.rm(file)\n",
@@ -114,6 +128,8 @@
     "\n",
     "# Get raw_records\n",
     "netcdf_dir = Path.cwd().parent / r\"data\" / r\"input\"\n",
+    "\n",
+    "\n",
     "records_files = list(netcdf_dir.glob(\"*.xlsx\"))\n",
     "raw_records = []\n",
     "for filepath in records_files:\n",
@@ -183,8 +199,8 @@
    "outputs": [],
    "source": [
     "def view_query_factory(uow, query, cell_id=None, exclude=None):\n",
-    "    \"\"\" \n",
-    "    Example custom use case by user to get a dictionary of xarray datasets \n",
+    "    \"\"\"\n",
+    "    Example custom use case by user to get a dictionary of xarray datasets\n",
     "\n",
     "    Arguments:\n",
     "\n",
@@ -201,7 +217,7 @@
     "\n",
     "    To query across multiple sets of data and organize neural data while excluding behavioral data\n",
     "\n",
-    "    E.g. can get dictionary of multiple session with spike times/labels/waveforms organized. Can filter by session, tetrode, animal and other relevant schema. \n",
+    "    E.g. can get dictionary of multiple session with spike times/labels/waveforms organized. Can filter by session, tetrode, animal and other relevant schema.\n",
     "    Can also restrict to one cell over time and exclude schema like position which are behavioral recordings.\n",
     "\n",
     "    \"\"\"\n",
@@ -216,15 +232,15 @@
     "\n",
     "        schema_ref = d['schema_ref'] # e.g. session, animal_position, spike_times, spike_labels\n",
     "        data_name = d['data_name'] # data_name is id that references schema, e.g. 'ANT-133a-4_20180517_133858' for session or '3' for probe id\n",
-    "        # data_names are custom ids with components determined by user to ensure unique data_names \n",
+    "        # data_names are custom ids with components determined by user to ensure unique data_names\n",
     "\n",
     "        # custom addition to exclude schema_ref = animak_position\n",
     "        # animal_position is consistent across tetrodes in a recording session and should be excluded\n",
-    "        # when querying neural data \n",
+    "        # when querying neural data\n",
     "        if exclude is not None and schema_ref in exclude:\n",
     "                continue\n",
     "\n",
-    "        # retrieve data and add to dictionary ensuring no duplicates \n",
+    "        # retrieve data and add to dictionary ensuring no duplicates\n",
     "        # also organizes different schema_ref with same data_name (e.g. spike times and labels for same session)\n",
     "        if data_name not in session_data:\n",
     "            session_data[data_name] = {}\n",
@@ -236,12 +252,12 @@
     "    # index is data_name of session\n",
     "    query_dataset = {name: xr.Dataset(data) for name, data in session_data.items()}\n",
     "    # query_dataset = [xr.Dataset(data) for name, data in session_data.items()]\n",
-    "    \n",
-    "    # optionally filter each dataset by a cell_id \n",
+    "\n",
+    "    # optionally filter each dataset by a cell_id\n",
     "    # only valid if cell_ids are matched across sessions (true in our data)\n",
     "    if cell_id is not None:\n",
     "        query_dataset = {name: _filter_cell_data(data, cell_id) for name, data in query_dataset.items()}\n",
-    "        \n",
+    "\n",
     "    return query_dataset\n",
     "\n",
     "# helper fxn to only select single cell label\n",
@@ -315,7 +331,7 @@
     "    print(data[next(iter(data))].data_vars)\n",
     "    ncount = len(set(list(data[next(iter(data))].spike_labels[:,0].values)))\n",
     "    print(\"Dataset has {} cell appearances\".format(ncount))\n",
-    "    \n",
+    "\n",
     "    # All sessions and single tetrode\n",
     "    query = {\n",
     "        \"probe_data_ref\": {'schema_ref': 'probe', 'data_name': '1'}\n",
@@ -692,7 +708,7 @@
     "    spike_positions_x = np.zeros((N, 1))\n",
     "    spike_positions_y = np.zeros_like(spike_positions_x)\n",
     "    new_spike_times = np.zeros_like(spike_positions_x)\n",
-    "    count = -1 \n",
+    "    count = -1\n",
     "\n",
     "    for index in range(N):\n",
     "\n",
@@ -730,7 +746,7 @@
     "    rate_map = rate_map/max(rate_map.flatten())\n",
     "\n",
     "    return rate_map, _\n",
-    "   \n",
+    "\n",
     "def _spike_map(pos_x, pos_y, arena_size, spike_x, spike_y, smoothing_factor, interp_size=(64, 64), useMinMaxPos=False):\n",
     "    kernlen = int(smoothing_factor * 8)\n",
     "    std = int(0.2 * kernlen)\n",
@@ -740,7 +756,7 @@
     "        min_y, max_y = np.min(pos_y), np.max(pos_y)\n",
     "    else:\n",
     "        min_x = [-arena_size[1]/2]\n",
-    "        max_x = [arena_size[1]/2] # width \n",
+    "        max_x = [arena_size[1]/2] # width\n",
     "        min_y = [-arena_size[0]/2]\n",
     "        max_y = [arena_size[0]/2] # height\n",
     "\n",
@@ -802,7 +818,7 @@
     "        max_y = max(pos_y)\n",
     "    else:\n",
     "        min_x = [-arena_size[1]/2]\n",
-    "        max_x = [arena_size[1]/2] # width \n",
+    "        max_x = [arena_size[1]/2] # width\n",
     "        min_y = [-arena_size[0]/2]\n",
     "        max_y = [arena_size[0]/2] # height\n",
     "\n",
@@ -903,7 +919,7 @@
     "\n",
     "        arena_shape = arena_record['arena_shape']\n",
     "        arena_unit_of_measure = arena_record['unit_of_measure']\n",
-    "        \n",
+    "\n",
     "        # custom for custom ratemap functions\n",
     "        arena_size, isCylinder = _extract_arena_size_from_shape(arena_record)\n",
     "\n",
@@ -927,7 +943,7 @@
     "    # iterate through tetrode sessions\n",
     "    for session in sessions:\n",
     "        spike_times = sessions[session].spike_times.to_numpy().squeeze()\n",
-    "        \n",
+    "\n",
     "        ratemap, _ = get_ratemap(x, y, t, spike_times, arena_size, smoothing_factor, speed_bounds, interp_size=interp_size, useMinMaxPos=useMinMaxPos)\n",
     "        if isCylinder:\n",
     "            ratemap = flat_disk_mask(ratemap)\n",
@@ -968,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
